 7. Fix slight drawing glitch when not using 'glow' for tab mouse-over.
 8. RTL fixes/workarounds for table headers.
 9. Workaround kcmshell terminating immediately after QtCurve config dialog is
    closed - increase KGlobal reference count.
10. When shading tab background, use fillRect() and not fillPath() - seems to
    workaround glithches with intel 2.12 graphics driver.

1.6.4
-----
1. Add Chinese translations - thanks to LiShaohui.
2. Fix toolbar/menubar borders (if being drawn) when colouring menubars as per
   titlebars.
3. Allow faded groupbox frame even when not shading background.
4. If there is no group box frame, this is set to none, or the frame is below
   the text - then don't indent the checkbox (if there is one).
5. Improve inner 3d part of line edits, combos, spinboxes, etc.
6. Fix some scrollbar arrows not appearing disabled even though they should
   be - e.g. in 'About Dolphin' dialog.
7. Support loading of png, jpeg, etc file types for background image.
8. Fix menubar/titlebar blending for Firefox's 'page source' window.

1.6.3
-----
 1. Fix sunken kwin button backgrounds when using background gradients.
 2. In config dialog, dont enforce bordered popup menus if rounded.
 3. Apply background opacity to menubars and toolbars.
 4. Fix issues with konqueror's combo-boxes and dark menubars.
 5. Fix display of rekonq titlebar when blending menubar and titlebar. Rekonq
    has a menubar, but it's hidden - QtCurve detected the menubar, and informed
    the kwin style of this, cuasing the titlebar to have an incorrect gradient.
 6. Disable statusbar hiding for rekonq - it does not use standard statusbars.
 7. When hiding status/menubars via kwin buttons, only re-act if there has been more
    then 1/2 a second between presses.
 8. Dont hightlight menu item arrows when not enabled.
 9. When initialising, selecting a preset, or importing a settings file, dont update
    preview until fully loaded.